<resources>
    <string name="app_name">FocusList</string>
    <string name="add_task">Add Task</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="placeholder_task_title">What do you want to do?</string>
    <string name="create_task">Create Task</string>
    <string name="task_body">Task Body</string>
    <string name="due_date">Due Date</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_desc">To delete your account, please enter your email and password.</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="save_draft">Save as draft</string>
    <string name="draft_list">Draft List</string>
    <string name="delete">Delete</string>

    <!--  Authentication  -->
    <string name="login">Login</string>
    <string name="login_desc">Log in to continue and enjoy all the features we’ve prepared for you.</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="register_desc">Join us today and unlock your full experience.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_desc">No worries — we’ll help you get back on track.</string>
    <string name="resend_verification">Resend Verification</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="minimal_char">Have at least 8 characters</string>
    <string name="minimal_caps">Have at least 1 uppercase</string>
    <string name="minimal_lowercase">Have at least 1 lowercase</string>
    <string name="minimal_number">Have at least 1 number</string>

    <string name="username">Username</string>
    <string name="search_task">Find your tasks</string>
    <string name="today_tasks">Today’s tasks</string>
    <string name="my_tasks">My tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="status_dot">Status:</string>
    <string name="greeting_message">Hi, %1$s</string>
    <string name="task_time">%1$s WIB</string>
    <string name="home_desc">Let’s be productive today!</string>
    <string name="deadline">Deadline</string>
    <string name="priority_scale">Priority Scale</string>
    <string name="add_image">Add Image</string>
    <string name="priority">Priority</string>
    <string name="edit_image">Edit Image</string>
    <string name="your_activity">Your activity</string>
    <string name="activity_for_task">What do you want to do?</string>
    <string name="upload_task">Upload Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="today_task_empty">You don\'t have any task today</string>
    <string name="your_task">Your Task:</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="user">User</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="days">days</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
    <string name="reminder_times">Reminder times</string>
    <string name="reminder_me">Remind Me At</string>
    <string name="no_deadline">No Deadline</string>
    <string name="no_priority">No Priority</string>
    <string name="reminder_text">Reminder set for %1$d days, %2$d hours, and %3$d minutes earlier</string>

</resources>