<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.CreateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarApp.Back"
            app:title="New Tasks" />

        <LinearLayout
            android:id="@+id/ll_add_image"
            style="@style/TaskImageContainer"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/add_image_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_image_icon"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_image_container"
            style="@style/TaskImageContainer"
            android:clipToOutline="true">

            <!-- Gambar yang ditampilkan -->
            <ImageView
                android:id="@+id/iv_selected_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <View
                android:id="@+id/dark_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000" />

            <!-- Overlay tombol edit -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="12dp"
                android:background="@drawable/overlay_dashed_border"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit_image_icon"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_image"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitle.Input"
            android:text="@string/activity_for_task" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_activity"
            style="@style/TextInputForm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_activity"
                android:maxWidth="488dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitle.Input"
            android:text="@string/description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/TextInputForm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/description"
                android:gravity="start|top"
                android:textAlignment="textStart"
                android:minHeight="180dp"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitle.Input"
            android:text="@string/deadline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_deadline"
            style="@style/TextInputForm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_deadline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/deadline"
                android:maxWidth="488dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:focusable="false"
                android:cursorVisible="false"
                android:inputType="none"
                android:longClickable="false"
                android:clickable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextTitle.Input"
            android:text="@string/priority_scale" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_priority"
            style="@style/TextInputForm.Dropdown">

            <com.rosemaryapp.amazingspinner.AmazingSpinner
                android:id="@+id/spinner_priority"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:labelFor="@id/til_priority"
                android:layout_height="wrap_content"
                android:hint="@string/priority"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar" 
            style="@style/ProgressBarApp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/ButtonApp"
            android:layout_marginTop="24dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_draft"
            style="@style/ButtonApp.Outline"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_draft" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>